fix: :bug: fix bug on mobile and web hung, also improve design

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -733,14 +733,40 @@ ul.social-network li {
 #scroll-top-btn:hover {
 	background-color: #2f6264;
 }
-
+.toast {
+	position: fixed;
+	top: 16px;
+	left: 50%;
+	transform: translateX(-50%);
+	padding: 12px 16px;
+	border-radius: 12px;
+	background-color: rgba(0, 0, 0, 0.7);
+	color: #fff;
+	z-index: 9999;
+	transition: opacity 0.3s;
+  }
+  
+  
+  .hide {
+	opacity: 0;
+  }
+  
+  .toast-text {
+	font-size: 14px;
+	line-height: 1.2;
+  }
+  
+  .show {
+	opacity: 1;
+  }
+  
 
 
 /* Media Query */
 
 
 @media (min-width: 576px) {
-	
+
 
 	.modal-dialog {
 		max-width: 40%;
@@ -847,6 +873,7 @@ ul.social-network li {
 	.search-ayah-input {
 		flex-direction: column;
 	}
+
 	#content-wrapper {
 		padding: 90px 30px 50px 30px;
 	}
